Added database connection.

--- a/uURL/Web.config
+++ b/uURL/Web.config
@@ -6,8 +6,8 @@
 
 <configuration>
   <appSettings>
-    <add key="ClientValidationEnabled" value="true"/> 
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
+    <add key="ClientValidationEnabled" value="true" /> 
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" /> 
   </appSettings>
     
   <system.web>
@@ -18,7 +18,7 @@
         <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
+      <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" /></assemblies>
     </compilation>
 
     <authentication mode="Forms">
@@ -32,14 +32,14 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages"/>
+        <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
   </system.web>
 
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
 
   <runtime>
@@ -50,4 +50,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<connectionStrings><add name="uURLEntities" connectionString="metadata=res://*/Models.UrlData.csdl|res://*/Models.UrlData.ssdl|res://*/Models.UrlData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=uURL;persist security info=True;user id=testuser;password=test;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
