Redirect to site based on ID

--- a/uURL/Web.config
+++ b/uURL/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -50,4 +50,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<connectionStrings><add name="uURLEntities" connectionString="metadata=res://*/Models.UrlData.csdl|res://*/Models.UrlData.ssdl|res://*/Models.UrlData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=uURL;persist security info=True;user id=testuser;password=test;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings>
+  <add name="uURLConnectionString" connectionString="Data Source=localhost;Initial Catalog=uURL;Persist Security Info=True;User ID=testuser;Password=test"
+    providerName="System.Data.SqlClient" />
+</connectionStrings></configuration>
